Adds matplotlib rc file and install instructions

--- a/CSV_database/Makefile
+++ b/CSV_database/Makefile
@@ -1,6 +1,10 @@
 # Download location database
 
-download:
+target = allCountries.zip
+source = allCountries.txt
+
+target:
+	rm -f ${target} ${source}
 	wget http://download.geonames.org/export/zip/allCountries.zip
 	unzip allCountries.zip
 
