Updates README and Makefile
Adds examples of how to use the file in the README. Renames the location
database as CSV made no sense. Also removes the zip file in the Make
script.

--- a/Location_database/Makefile
+++ b/Location_database/Makefile
@@ -7,4 +7,5 @@ target:
 	rm -f ${target} ${source}
 	wget http://download.geonames.org/export/zip/allCountries.zip
 	unzip allCountries.zip
+	rm -f ${target}
 
